@@ -34,10 +34,10 @@ $PGV_BLOCKS["print_gedcom_block"]["config"]		= array("cache"=>0);
 
 //-- function to print the gedcom block
 function print_gedcom_block($block = true, $config="", $side, $index) {
-	global $hits, $pgv_lang, $GEDCOM, $GEDCOMS, $SHOW_COUNTER;
+	global $hits, $pgv_lang, $GEDCOM, $SHOW_COUNTER;
 
 	$id = "gedcom_welcome";
-	$title = PrintReady($GEDCOMS[$GEDCOM]["title"]);
+	$title = PrintReady(get_gedcom_setting(PGV_GED_ID, 'title'));
 	$content = "<div class=\"center\">";
 	$content .= "<br />".format_timestamp()."<br />\n";
 	if ($SHOW_COUNTER)
