@@ -10,6 +10,7 @@
 
 
 Version 4.1.5
+ - Fixed: Stats block counting records from other gedcoms (fisharebest)
  - Fixed: [ 1942593 ] Relationship Chart nth Cousin Calculation Issue (canajun2eh)
  - Fixed: Temp Fix for Lightbox giving errors when Googlemaps not installed (windmillway)
  - Fixed: [ 1944250 ] placelist.php Level Issue On Language Change For Some Themes (canajun2eh)
